Refactor movie-related services to use pageable responses and enhance error handling

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+  jackson:
+    property-naming-strategy: SNAKE_CASE
 
 external:
   tmdb-api:
