Fixing movie search method parameters and refactor security headers configuration

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 external:
   tmdb-api:
