Implement user plan management with CRUD operations and add plan features

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,9 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  config:
+    import: classpath:plans-config.yml
+
 
 external:
   tmdb-api:
